Update DatabaseHandler.java